# myTA

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html  signup.html
diary/: admin.py  forms.py  models.py  urls.py  utils.py  views.py  vision_rag.py
diary/migrations/: 0001_initial.py  0002_auto_20250607_1933.py  0003_comment_reviewer.py  0004_day_image.py
diary/templates/diary/: day_confirm_delete.html  day_detail.html  day_form.html  day_list.html  manage_reviewers.html  review_archive.html  review_list.html
diary/templates/diary/partials/: comment_section.html  reviewer_form.html  reviewer_list.html
project/: settings.py  urls.py
project/templates/: index.html
templates/: base.html  index.html
theme/static_src/: package-lock.json  tailwind.config.js
