[project]
name = "diary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cohere>=5.15.0",
    "django>=3.2,<3.3",
    "django-storages>=1.14.6",
    "django-tailwind>=3.6.0",
    "django-widget-tweaks>=1.5.0",
    "dotenv>=0.9.9",
    "google-cloud-storage>=3.1.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.0.2",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
